<resources>
    <string name="app_name">Sample School</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_timetable">Timetable</string>
    <string name="menu_myCourses">My Courses</string>
    <string name="menu_class">My Class</string>
    <string name="menu_view_quiz">Quiz</string>
    <string name="menu_view_assignments">Assignments</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_view_exams">Examination</string>
    <string name="menu_view_attendance">Attendance</string>
    <string name="menu_view_announcement">Announcements</string>
    <string name="menu_view_results">Results</string>
    <string name="menu_view_messages">Messages</string>

    <string name="menu_webView">Study Materials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>