<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_home_timetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/hvd"
            android:text="Today's Timetable"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_view_courses"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:contentDescription="@string/menu_myCourses"
                        android:src="@drawable/ic_courses_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="My Courses"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_view_time_table"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/menu_timetable"
                        android:src="@drawable/ic_timetable_icon_yellow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="Timetable"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <TextView
                    android:id="@+id/txt_announcement"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/light_red"
                    android:fontFamily="@font/hvd"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:translationZ="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_view_announcements"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/menu_timetable"
                        android:src="@drawable/ic_announcement" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="Announcements"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <TextView
                    android:id="@+id/txt_aggregate_attendance"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/light_red"
                    android:fontFamily="@font/hvd"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:text="100%"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:translationZ="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_view_attendance"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/menu_timetable"
                        android:src="@drawable/ic_attendance" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="Attendance"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <TextView
                    android:id="@+id/txt_quiz"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/light_red"
                    android:fontFamily="@font/hvd"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:translationZ="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_quiz"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:contentDescription="@string/menu_view_quiz"
                        android:src="@drawable/ic_quiz" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="QUIZ"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <TextView
                    android:id="@+id/txt_assignments"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/light_red"
                    android:fontFamily="@font/hvd"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:translationZ="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <ImageButton
                        android:id="@+id/btn_view_assignments"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:contentDescription="@string/menu_timetable"
                        android:src="@drawable/ic_assignments" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="Assignments"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_results"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:contentDescription="@string/menu_view_quiz"
                        android:src="@drawable/ic_results" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="Results"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white">

                <TextView
                    android:id="@+id/txt_exams"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/light_red"
                    android:fontFamily="@font/hvd"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:translationZ="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_exams"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:contentDescription="@string/menu_view_exams"
                        android:src="@drawable/ic_examination" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/hvd"
                        android:gravity="center"
                        android:text="Examination"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>